MB-30278: Reset cached Path component strings before use

There is an error in the handling of escaped paths (those containing a
backtick `) in Path::convert_escaped, in how path compoents are
cached.

The Path class maintains a cache of std::string path components; to
reduce the memory allocation overhead of convert_escaped(). Between
each call to Path::parse() the Path object is reset via clear(),
marking in-use path components as available.

However, the state of these cached, available compoents is /not/ reset
- i.e. the strings' data carries over from the previous call. As a
result when cached component objects are re-used then
convert_escaped() ends up appending to a non-empty string.

For example, a multi-mutation request which attempts to add 3
dictionary elements those name contains a backtick (key1`, key2` &
key3`) results in:

    [ RUN      ] Subdoc/SubdocTestappTest.MB_30278_SubdocBacktickMultiMutation/0_JsonNo
    /Users/dave/repos/couchbase/server/source/kv_engine/tests/testapp/testapp.cc:895: Failure
    Value of: actual
      Actual: "{\"key1`\":1,\"key1`key2`\":2,\"key1`key2`key3`\":3}"
    Expected: expected_value
    Which is: "{\"key1`\":1,\"key2`\":2,\"key3`\":3}"

Note how key2` is incorrectly transformed into key1`key2`.

Resolve the issue by resetting the component object states in
Path::clear(); before adding them to the cached list. As such they are
in a 'pristine' state for re-use.

Change-Id: Ic4225bef2d6bb70fb6185e3bc0ddd87270ce3672
Reviewed-on: http://review.couchbase.org/96175
Well-Formed: Build Bot <build@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Trond Norbye <trond.norbye@gmail.com>